test/files/neg/t2968b.scala
case class Const()
{
}

class Var
{
// missing brace
