test/files/neg/t2968b.check
t2968b.scala:7: error: '}' expected but eof found.
// missing brace
                ^
one error found
